<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="receiptFragment"
            type="com.mehmet.genc.mywallet.fragment.receipt.ReceiptFragment" />
        <variable
            name="payment"
            type="com.mehmet.genc.mywallet.entity.Payment" />
        <variable
            name="paymentAdapter"
            type="com.mehmet.genc.mywallet.adapter.PaymentAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.receipt.ReceiptFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewPickImage"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:onClick="@{() -> receiptFragment.requestBitmap()}"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_corner"
                    android:src="@drawable/ic_pick_photo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_a_photo"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/from_phone"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCapturePhoto"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:onClick="@{() -> receiptFragment.captureBitmap()}"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_corner"
                    android:src="@drawable/ic_camera" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/capture_photo"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/from_camera"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/paymentRecyclerView"
            android:layout_width="409dp"
            android:layout_height="621dp"
            android:adapter="@{paymentAdapter}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/cardViewCapturePhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/receipt_view_holder" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>